# fakefat

./: Cargo.toml  LICENSE  dbt.txt  out.txt
src/: bpb.rs  changeset.rs  clustermapping.rs  datetime.rs  dirent.rs  faker.rs  fat.rs  fsinfo.rs  lib.rs  longname.rs  pathbuffer.rs  shortname.rs  stdimpl.rs  traits.rs
