[package]
name = "fakefat"
version = "0.1.0"
authors = ["ischeinkman <scheinkman.ilan@gmail.com>"]
edition = "2018"

#[[bin]]
#name = "ff"
#path = "src/lib.rs"

#[bin.ff.features]
#default = ["std"]
#std = []

[dependencies]
#mbr-nostd="0.1.0"

#byteorder = {version = "1", default-features=false }
#bitflags = "1.0"
#log = "0.4"

#fatfs = "0.3"
#simple_logger = "1.2"

[features]
default = ["std"]
std = ["alloc"]
alloc = []